various incremental improvements to logging

--- a/client/app/bundles/Tasks/index.scss
+++ b/client/app/bundles/Tasks/index.scss
@@ -507,7 +507,7 @@ Task List
 }
 
 /* *********************************
-List removal intimation
+List removal animation
 ********************************* */
 
 .doComplete {
